PolarDecoder submodule added

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "PBCH_DMRS_Generator-5G"]
 	path = PBCH_DMRS_Generator-5G
 	url = git@github.com:Dimach24/PBCH_DMRS_Generator-5G.git
+[submodule "PolarDecoder"]
+	path = PolarDecoder
+	url = git@github.com:Ivan1Kulikov/PolarDecoder.git
